<resources>
    <string name="app_name">Baking App</string>
    <string name="test_string_recipe_ingredients">2 cups Graham Cracker crumbs\n6 tablespoons unsalted butter, melted\n0.5 cup granulated sugar\n1.5 teaspoon salt\n5 tablespoons vanilla\n1 kilogram Nutella or other chocolate-hazelnut spread\n500 grams Mascapone Cheese(room temperature)\n1 cup heavy cream(cold)\n4 ounces cream cheese(softened)</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="add_widget">Add widget</string>
    <string name="current_recipe_for_testing">{\"ingredients\":[{\"ingredientMeasure\":\"CUP\",\"ingredientName\":\"Graham Cracker crumbs\",\"ingredientQuantity\":2.0},{\"ingredientMeasure\":\"TBLSP\",\"ingredientName\":\"unsalted butter, melted\",\"ingredientQuantity\":6.0},{\"ingredientMeasure\":\"CUP\",\"ingredientName\":\"granulated sugar\",\"ingredientQuantity\":0.5},{\"ingredientMeasure\":\"TSP\",\"ingredientName\":\"salt\",\"ingredientQuantity\":1.5},{\"ingredientMeasure\":\"TBLSP\",\"ingredientName\":\"vanilla\",\"ingredientQuantity\":5.0},{\"ingredientMeasure\":\"K\",\"ingredientName\":\"Nutella or other chocolate-hazelnut spread\",\"ingredientQuantity\":1.0},{\"ingredientMeasure\":\"G\",\"ingredientName\":\"Mascapone Cheese(room temperature)\",\"ingredientQuantity\":500.0},{\"ingredientMeasure\":\"CUP\",\"ingredientName\":\"heavy cream(cold)\",\"ingredientQuantity\":1.0},{\"ingredientMeasure\":\"OZ\",\"ingredientName\":\"cream cheese(softened)\",\"ingredientQuantity\":4.0}],\"recipeId\":1,\"recipeImage\":\"\",\"recipeName\":\"Nutella Pie\",\"recipeServings\":8,\"steps\":[{\"stepDescription\":\"Recipe Introduction\",\"stepId\":0,\"stepShortDescription\":\"Recipe Introduction\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffd974_-intro-creampie/-intro-creampie.mp4\"},{\"stepDescription\":\"1. Preheat the oven to 350°F. Butter a 9\\\" deep dish pie pan.\",\"stepId\":1,\"stepShortDescription\":\"Starting prep\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"\"},{\"stepDescription\":\"2. Whisk the graham cracker crumbs, 50 grams (1 cup) of sugar, and 1 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed.\",\"stepId\":2,\"stepShortDescription\":\"Prep the cookie crust.\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffd9a6_2-mix-sugar-crackers-creampie/2-mix-sugar-crackers-creampie.mp4\"},{\"stepDescription\":\"3. Press the cookie crumb mixture into the prepared pie pan and bake for 12 minutes. Let crust cool to room temperature.\",\"stepId\":3,\"stepShortDescription\":\"Press the crust into baking form.\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffd9cb_4-press-crumbs-in-pie-plate-creampie/4-press-crumbs-in-pie-plate-creampie.mp4\"},{\"stepDescription\":\"4. Beat together the nutella, mascarpone, 1 teaspoon of salt, and 1 tablespoon of vanilla on medium speed in a stand mixer or high speed with a hand mixer until fluffy.\",\"stepId\":4,\"stepShortDescription\":\"Start filling prep\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffd97a_1-mix-marscapone-nutella-creampie/1-mix-marscapone-nutella-creampie.mp4\"},{\"stepDescription\":\"5. Beat the cream cheese and 50 grams (1 cup) of sugar on medium speed in a stand mixer or high speed with a hand mixer for 3 minutes. Decrease the speed to medium-low and gradually add in the cold cream. Add in 2 teaspoons of vanilla and beat until stiff peaks form.\",\"stepId\":5,\"stepShortDescription\":\"Finish filling prep\",\"stepThumbnailUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffda20_7-add-cream-mix-creampie/7-add-cream-mix-creampie.mp4\",\"stepVideoUrl\":\"\"},{\"stepDescription\":\"6. Pour the filling into the prepared crust and smooth the top. Spread the whipped cream over the filling. Refrigerate the pie for at least 2 hours. Then it\\u0027s ready to serve!\",\"stepId\":6,\"stepShortDescription\":\"Finishing Steps\",\"stepThumbnailUrl\":\"\",\"stepVideoUrl\":\"https://d17h27t6h515a5.cloudfront.net/topher/2017/April/58ffda45_9-add-mixed-nutella-to-crust-creampie/9-add-mixed-nutella-to-crust-creampie.mp4\"}]}</string>

    <string name="widget_empty_view_text_view_text">Select a Recipe in the Baking App</string>

    <string name="recipe_card_cook_button_label">Cook</string>

    <string name="ingredients_list_item_ingredients_label">Ingredients</string>
    <string name="ingredients_list_item_cook_directions_label">Click \'n\' Cook Directions</string>

    <string name="recipe_step_next_step_button_label">Next</string>
    <string name="recipe_step_previous_step_button_label">Previous</string>
    <string name="recipe_step_empty_text_view_text">No Video for This Step</string>
</resources>
