<?xml version="1.0" encoding="utf-8"?>

<!-- This fragment displays a recipe step -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/recipe_step_fragment_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_exo_player_tablet_portrait">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_player_view_height">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:resize_mode="fill" />

        <TextView
            android:id="@+id/tv_player_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/recipe_step_empty_text_view_text"
            android:textSize="@dimen/recipe_step_main_text_size" />

        <ImageView
            android:id="@+id/iv_thumbnail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/fragment_recipe_step_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/layout_padding">

        <TextView
            android:id="@+id/tv_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/padding_between_text_views"
            android:textSize="@dimen/recipe_step_title_text_size"
            tool:text="Starting prep" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_short_description"
            android:textSize="@dimen/recipe_step_main_text_size"
            tool:text="1. Preheat the oven to 350°F. Butter a 9\'' deep dish pie pan." />

        <TextView
            android:id="@+id/tv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/recipe_step_previous_step_button_label"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/recipe_step_button_text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/recipe_step_next_step_button_label"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/recipe_step_button_text_size"
            android:visibility="gone" />

    </RelativeLayout>
</LinearLayout>
